--- a/views/about.hbs
+++ b/views/about.hbs
@@ -23,7 +23,7 @@
                       <!-- right div -->
                     <div class="col-md-6 col-12 main-header-left">
                         <h1>I am a <span class="text_clr"> MERN </span>Developer</h1>
-                        <a href="/more" target="_raju"><button>About me</button></a>
+                        {{!-- <a href="/more" target="_raju"><button>About me</button></a> --}}
 
                     </div>
                   
